# a2

./: CMakeLists.txt  Readme.md
src/app/: CMakeLists.txt  main.cpp  mechanisms.h
src/optLib/: GradientDescentMinimizer.h  Minimizer.h  NewtonFunctionMinimizer.h  RandomMinimizer.h
src/rbSimLib/: Joint.h  KinematicEnergy.h  MechanismOptimizer.h  RigidBody.h  RigidBodySimulation.h
src/tests/: main.cpp
